// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationSection when isPrimary is not specified renders correctly 1`] = `
<Styled(MuiBox)
  flexGrow={0}
>
  <WithStyles(ForwardRef(Divider)) />
</Styled(MuiBox)>
`;

exports[`NavigationSection when isPrimary is specified false renders correctly 1`] = `
<Styled(MuiBox)
  flexGrow={0}
>
  <WithStyles(ForwardRef(Divider)) />
</Styled(MuiBox)>
`;

exports[`NavigationSection when isPrimary is specified true renders correctly 1`] = `
<Styled(MuiBox)
  flexGrow={1}
>
  <WithStyles(ForwardRef(Divider)) />
</Styled(MuiBox)>
`;
